--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>ระบบรับสมัครนักเรียนแกนนำ • โรงเรียนสตรีพัทลุง</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="icon" href="https://img5.pic.in.th/file/secure-sv1/IMG_25650953161d1c1bbdd8.jpeg">
+  <link rel="icon" href="https://img5.pic.in.th/file/secure-sv1/IMG_25656e444b2ea5e43496.png">
   <script>
     tailwind.config = {
       theme: {
