--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div id="systemClosedMessage" class="mt-6 hidden">
         <div class="p-6 rounded-xl bg-red-50 text-red-700 ring-1 ring-red-200">
           <p class="font-semibold text-lg">⚠️ ระบบรับสมัครปิดอยู่</p>
-          <p class="mt-2 text-sm">ขออภัยค่ะ/ครับ ขณะนี้ระบบรับสมัครคณะกรรมการนักเรียนยังไม่เปิดให้บริการ หรือได้ปิดรับสมัครไปแล้ว</p>
+          <p class="mt-2 text-sm">ขออภัยค่ะ/ครับ ขณะนี้ระบบรับสมัครนักเรียนแกนนำโรงเรียนคุณธรรม สพฐ. โรงเรียนสตรีพัทลุงยังไม่เปิดให้บริการ หรือได้ปิดรับสมัครไปแล้ว</p>
           <p class="mt-1 text-sm">โปรดติดตามประกาศของโรงเรียนคุณธรรม สพฐ. โรงเรียนสตรีพัทลุง หรือติดต่อผู้ดูแลระบบหากมีข้อสงสัย</p>
         </div>
       </div>
