--- a/index.html
+++ b/index.html
@@ -346,9 +346,9 @@
         <div class="rounded-2xl bg-white shadow-lg ring-1 ring-black/5 px-4 py-4 text-gray-700 ">
            <div class="grid grid-cols-1 gap-y-2 text-sm w-fit mx-auto">
     <div class="flex items-center space-x-2">
-        <a href="https://spt-moral-school.github.io/terms/#terms" class="text-gray-400 hover:text-purple-400 transition duration-300">ข้อกำหนดการใช้งาน</a>
+        <a href="https://spt-moral-school.github.io/#terms" class="text-gray-400 hover:text-purple-400 transition duration-300">ข้อกำหนดการใช้งาน</a>
         <p class="text-gray-400">|</p>
-        <a href="https://spt-moral-school.github.io/terms/#policy" class="text-gray-400 hover:text-purple-400 transition duration-300">นโยบายความเป็นส่วนตัว</a>
+        <a href="https://spt-moral-school.github.io/#policy" class="text-gray-400 hover:text-purple-400 transition duration-300">นโยบายความเป็นส่วนตัว</a>
     </div>
 </div>
           <div class="text-sm text-center">&copy; 2024 SPT MORAL SCHOOL - โรงเรียนคุณธรรม สพฐ. โรงเรียนสตรีพัทลุง | All Rights Reserved</div>
