--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ระบบรับสมัครนักเรียนแกนนำ • โรงเรียนสตรีพัทลุง</title>
+  <title>ระบบรับสมัครนักเรียนแกนนำ • โรงเรียนคุณธรรม สพฐ. สตรีพัทลุง</title>
+      <meta property="og:title" content="ระบบรับสมัครนักเรียนแกนนำ - โรงเรียนคุณธรรม สพฐ. โรงเรียนสตรีพัทลุง | SPT Moral School" />
+    <meta property="og:description" content="เว็บไซต์รับสมัครนักเรียนแกนนำของโรงเรียนคุณธรรม สพฐ. โรงเรียนสตรีพัทลุง" />
+    <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/-.-3f908b83b2e666ca.png" />
+    <meta property="og:url" content="https://spt-moral-school.github.io/" />
+    <meta property="og:type" content="website" /> <!-- หรือ article, product, etc. -->
       <link rel="icon" type="image/png" href="favicon.PNG"> 
     
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> 
