--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <button type="button" data-tab="apply" class="tab-btn tab-active px-5 py-3 rounded-xl btn hover:bg-gray-100">หน้ารับสมัคร</button>
       <button type="button" data-tab="check-status" class="tab-btn px-5 py-3 rounded-xl btn hover:bg-gray-100">ตรวจสอบการสมัคร</button>
       <button type="button" data-tab="admin" class="tab-btn px-5 py-3 rounded-xl btn hover:bg-gray-100">ผู้ดูแล</button>
-      <a href="https://spt-moral-school.github.io/#contect"class="tab-btn px-5 py-3 rounded-xl btn hover:bg-gray-100">แจ้งปัญหา</a>
+      <a href="https://spt-moral-school.github.io/#contact" class="tab-btn px-5 py-3 rounded-xl btn hover:bg-gray-100">แจ้งปัญหา</a>
     </nav>
 
     <section id="tab-apply" class="mt-6 rounded-2xl p-6 md:p-8 bg-white ring-1 ring-black/10 shadow-lg">
