--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
       <button type="button" data-tab="apply" class="tab-btn tab-active px-5 py-3 rounded-xl btn hover:bg-gray-100">หน้ารับสมัคร</button>
       <button type="button" data-tab="check-status" class="tab-btn px-5 py-3 rounded-xl btn hover:bg-gray-100">ตรวจสอบการสมัคร</button>
       <button type="button" data-tab="admin" class="tab-btn px-5 py-3 rounded-xl btn hover:bg-gray-100">ผู้ดูแล</button>
-      <a href="https://spt-moral-school.github.io/#contact" class="tab-btn px-5 py-3 rounded-xl btn hover:bg-gray-100">แจ้งปัญหา</a>
     </nav>
 
     <section id="tab-apply" class="mt-6 rounded-2xl p-6 md:p-8 bg-white ring-1 ring-black/10 shadow-lg">
@@ -103,7 +102,7 @@
               <span id="countdownDisplay">...</span>
             </div>
           </div>
-          <p class="mt-2 text-sm" id="defaultClosedMessage">โปรดติดตามประกาศของโรงเรียนคุณธรรม สพฐ. โรงเรียนสตรีพัทลุง หรือติดต่อผู้ดูแลระบบหากมีข้อสงสัย</p>
+          <p class="mt-2 text-sm" id="defaultClosedMessage">โปรดติดตามประกาศของโรงเรียนคุณธรรม สพฐ. โรงเรียนสตรีพัทลุง หรือติดต่อผู้ดูแลระบบหากมีข้อสงสัย หรือแจ้ง<a href="https://spt-moral-school.github.io/#contact">ติดต่อ</a></p>
         </div>
       </div>
       <form id="applyForm" class="mt-6 grid grid-cols-1 md:grid-cols-2 gap-4 hidden" autocomplete="off"> 
@@ -355,6 +354,7 @@
     <footer class="mt-10 text-center">
       <div class="mx-auto max-w-6xl">
         <div class="rounded-2xl bg-white shadow-lg ring-1 ring-black/5 px-4 py-4 text-gray-700 ">
+          <a href="https://spt-moral-school.github.io/#contact" class="text-gray-400 hover:text-purple-400 transition duration-300">ติดต่อ/แจ้งปัญหา</a>
            <div class="grid grid-cols-1 gap-y-2 text-sm w-fit mx-auto">
     <div class="flex items-center space-x-2">
         <a href="https://spt-moral-school.github.io/#terms" class="text-gray-400 hover:text-purple-400 transition duration-300">ข้อกำหนดการใช้งาน</a>
