Update default closed message in index.html
Removed contact link from default closed message.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <span id="countdownDisplay">...</span>
             </div>
           </div>
-          <p class="mt-2 text-sm" id="defaultClosedMessage">โปรดติดตามประกาศของโรงเรียนคุณธรรม สพฐ. โรงเรียนสตรีพัทลุง หรือติดต่อผู้ดูแลระบบหากมีข้อสงสัย หรือแจ้ง<a href="https://spt-moral-school.github.io/#contact">ติดต่อ</a></p>
+          <p class="mt-2 text-sm" id="defaultClosedMessage">โปรดติดตามประกาศของโรงเรียนคุณธรรม สพฐ. โรงเรียนสตรีพัทลุง หรือติดต่อผู้ดูแลระบบหากมีข้อสงสัย </p>
         </div>
       </div>
       <form id="applyForm" class="mt-6 grid grid-cols-1 md:grid-cols-2 gap-4 hidden" autocomplete="off"> 
